2004-08-09  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/hal_intr.h (HAL_PLATFORM_RESET): Added missing ;

2004-08-04  Alexander Neundorf <alexander.neundorf@jenoptik.com>

	* include/hal_io.h: Add cyg_hal_sys_mkdir() system call
	* include/hal_intr.h: Add HAL_PLATFORM_RESET() macro

2004-07-04  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/synth.ld: Added the 2ram section needed for flash devices

2004-06-21  Alexander Neundorf <alexander.neundorf@jenoptik.com>

	* include/hal_io.h: 
	Add cyg_hal_sys_readdir(), cyg_hal_sys_lstat(), 
        cyg_hal_sys_fstat() system call toegther with their 
        accompanying data structures and file mode bits

2004-06-18  William Donahue  <WDonahue@siriusradio.com>

	* include/hal_io.h (CYG_HAL_SYS_FD_ZERO): Added misisng }

2004-05-27  Alexander Neundorf <alexander.neundorf@jenoptik.com>

	* include/hal_io.h: 
	Fix the open/fcntl flags by prepending a leading 0 so that they
	are interpreted correctly as octal instead of decimal.

2004-04-22  Jani Monoses <jani@iv.ro>

	* cdl/hal_synth.cdl :
	Invoke tail with stricter syntax that works in latest coreutils. 

2003-07-18  Nick Garnett  <nickg@balti.calivar.com>

	* cdl/hal_synth.cdl:
        Changed values for CYGNUM_HAL_RTC_NUMERATOR,
        CYGNUM_HAL_RTC_DENOMINATOR and CYGNUM_HAL_RTC_PERIOD to
        "default_value" from "calculated". This makes it easier
        to change these values globally.
        
2003-07-05  Bart Veer  <bartv@ecoscentric.com>

	* src/synth_entry.c:
	Add more dummy functions to cope with dependencies introduced by
	various versions of g++.

2003-06-27  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/synth.ld: Synthetic linux at least needs libgcc_eh.a in the
	GROUP() to resolve exception handling symbols.

2003-02-25  Iztok Zupet  <iz@vsr.si>

	* doc/synth.sgml: Replaced .gif with .png to get PDF
	output.
	* doc/*.gif: Delete.
	* doc/*.png: Replacements for .gifs added.

2003-04-10  Nick Garnett  <nickg@balti.calivar.com>

	* src/synth.ld: 